Seems html is different with flask

--- a/template/index.html
+++ b/template/index.html
@@ -1,8 +1,5 @@
-<html>
-    <head>
-        <title>Flask Tutorial</title>
-    <head>
-    <body>
-        <h1>Welcome to my Nightmare</h1>
-    </body>
-</html>
+{% extends "layout.html" %}
+
+{% block content %}
+	<h1>Welcome to my nightmare!</h1>
+{% endblock content %}
